<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.e_marketapp.ui.home.HomeFragment"
        android:label="@string/e_market"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/basket"
        android:name="com.example.e_marketapp.ui.basket.BasketFragment"
        android:label="@string/basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/favorite"
        android:name="com.example.e_marketapp.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>